5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1692_1099.log
== TEST (2019-04-30 18:51:24) 
-- CODE:
a= float(input("lado a: "))
b= float(input("lado b: "))
c= float(input("lado c: "))
print("Entradas:", a,",", b,",", c)

if ((a<= b+c and b<= a+c and c<= a+b) and a>=0 and b>=0 and c>=0):
	if (a==b and b==c):
		print("Tipo de triangulo: equilatero")
	else:
		if (a=!b and b=!c and c=!a):
			print("Tipo de triangulo: escaleno")
		else:
			print("Tipo de triangulo: isosceles")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 10
    if (a=!b and b=!c and c=!a):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:51:48) 
-- CODE:
a= float(input("lado a: "))
b= float(input("lado b: "))
c= float(input("lado c: "))
print("Entradas:", a,",", b,",", c)

if ((a<= b+c and b<= a+c and c<= a+b) and a>=0 and b>=0 and c>=0):
	if (a==b and b==c):
		print("Tipo de triangulo: equilatero")
	else:
		if (a =! b and b =! c and c =! a):
			print("Tipo de triangulo: escaleno")
		else:
			print("Tipo de triangulo: isosceles")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 10
    if (a =! b and b =! c and c =! a):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:52:02) 
-- CODE:
a= float(input("lado a: "))
b= float(input("lado b: "))
c= float(input("lado c: "))
print("Entradas:", a,",", b,",", c)

if ((a<= b+c and b<= a+c and c<= a+b) and a>=0 and b>=0 and c>=0):
	if (a==b and b==c):
		print("Tipo de triangulo: equilatero")
	else:
		if (a =! b and b =! c and c =! a):
			print("Tipo de triangulo: escaleno")
		else:
			print("Tipo de triangulo: isosceles")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 10
    if (a =! b and b =! c and c =! a):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:52:25) 
-- CODE:
a= float(input("lado a: "))
b= float(input("lado b: "))
c= float(input("lado c: "))
print("Entradas:", a,",", b,",", c)

if ((a<= b+c and b<= a+c and c<= a+b) and a>=0 and b>=0 and c>=0):
	if (a==b and b==c):
		print("Tipo de triangulo: equilatero")
	else:
		if (a =! b and b =! c and c =! a):
			print("Tipo de triangulo: escaleno")
		else:
			print("Tipo de triangulo: isosceles")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 10
    if (a =! b and b =! c and c =! a):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:53:43) 
-- CODE:
a= float(input("lado a: "))
b= float(input("lado b: "))
c= float(input("lado c: "))
print("Entradas:", a,",", b,",", c)

if ((a<= b+c and b<= a+c and c<= a+b) and a>=0 and b>=0 and c>=0):
	if (a==b and b==c):
		print("Tipo de triangulo: equilatero")
	else:
		if (a =! b and b =! c and c =! a):
			print("Tipo de triangulo: escaleno")
		else:
			print("Tipo de triangulo: isosceles")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 10
    if (a =! b and b =! c and c =! a):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:54:25) 
-- CODE:
a= float(input("lado a: "))
b= float(input("lado b: "))
c= float(input("lado c: "))
print("Entradas:", a,",", b,",", c)

if ((a<= b+c and b<= a+c and c<= a+b) and a>=0 and b>=0 and c>=0):
	if (a==b and b==c):
		print("Tipo de triangulo: equilatero")
	else:
		if (a!=b and b!=c and c!=a):
			print("Tipo de triangulo: escaleno")
		else:
			print("Tipo de triangulo: isosceles")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:55:12) 
-- CODE:
a= float(input("lado a: "))
b= float(input("lado b: "))
c= float(input("lado c: "))
print("Entradas:", a,",", b,",", c)

if ((a< b+c and b< a+c and c< a+b) and a>=0 and b>=0 and c>=0):
	if (a==b and b==c):
		print("Tipo de triangulo: equilatero")
	else:
		if (a!=b and b!=c and c!=a):
			print("Tipo de triangulo: escaleno")
		else:
			print("Tipo de triangulo: isosceles")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:55:20) 
-- CODE:
a= float(input("lado a: "))
b= float(input("lado b: "))
c= float(input("lado c: "))
print("Entradas:", a,",", b,",", c)

if ((a< b+c and b< a+c and c< a+b) and a>=0 and b>=0 and c>=0):
	if (a==b and b==c):
		print("Tipo de triangulo: equilatero")
	else:
		if (a!=b and b!=c and c!=a):
			print("Tipo de triangulo: escaleno")
		else:
			print("Tipo de triangulo: isosceles")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.124492
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
